// proto/quanta_admin_service.proto
syntax = "proto2";
package grpc_service;
option go_package = "./quanta_admin_service;quanta_admin_service";


// Define the service
service QuantaAdmin {
  // 获取策略实例配置信息
  rpc GetStrategyInstanceConfig (CommonGetRequest) returns (GetInstanceConfigResponse);
  // 获取策略启停标志
  rpc GetStartOrStopFlag (CommonGetRequest) returns (GetStartOrStopFlagResponse);
}

// Message definitions
message CommonGetRequest {
  required string instance_id = 1;
}

message GetInstanceConfigResponse {
  required string instance_id = 1;
  repeated InstanceConfig configs = 2; //配置信息
}

message InstanceConfig {
  required string param_key = 1;
  required string param_value = 2;
}

message GetStartOrStopFlagResponse {
  required string instance_id = 1;
  required bool flag  = 2;
}
